# nebula

./: .cspell.json  BENCHMARK_REPORT.md
docs/: benchmark_guide.md  cuda_implementation_summary.md  cuda_pipeline_status.md  cuda_zero_copy_integration_plan.md  refactoring_summary.md  why_cuda_is_better.md
scripts/: analyze_benchmark.py  benchmark_runner.bash  preprocess_zensical_docs.py
scripts/bpftrace/: hesai_cpu_latency.bt  hesai_gpu_latency.bt
src/nebula_continental/nebula_continental/: CMakeLists.txt
src/nebula_continental/nebula_continental/src/: continental_ars548_ros_wrapper.cpp  continental_srr520_ros_wrapper.cpp
src/nebula_core/nebula_core_hw_interfaces/include/nebula_core_hw_interfaces/nebula_hw_interfaces_common/connections/: udp.hpp
src/nebula_hesai/nebula_hesai/: CMakeLists.txt  package.xml
src/nebula_hesai/nebula_hesai/include/nebula_hesai/: decoder_wrapper.hpp
src/nebula_hesai/nebula_hesai/src/: decoder_wrapper.cpp  hesai_ros_wrapper.cpp
src/nebula_hesai/nebula_hesai/tests/: hesai_cuda_decoder_test.cpp  hesai_ros_decoder_test.hpp
src/nebula_hesai/nebula_hesai_common/include/nebula_hesai_common/: hesai_common.hpp
src/nebula_hesai/nebula_hesai_decoders/: CMakeLists.txt
src/nebula_hesai/nebula_hesai_decoders/include/nebula_hesai_decoders/: hesai_driver.hpp
src/nebula_hesai/nebula_hesai_decoders/include/nebula_hesai_decoders/cuda/: hesai_cuda_decoder.hpp
src/nebula_hesai/nebula_hesai_decoders/include/nebula_hesai_decoders/decoders/: angle_corrector_calibration_based.hpp  angle_corrector_correction_based.hpp  hesai_decoder.hpp  hesai_scan_decoder.hpp  hesai_sensor.hpp
src/nebula_hesai/nebula_hesai_decoders/include/nebula_hesai_decoders/decoders/cuda/: hesai_cuda_decoder.hpp
src/nebula_hesai/nebula_hesai_decoders/src/cuda/: hesai_cuda_kernels.cu
src/nebula_robosense/nebula_robosense/: CMakeLists.txt
src/nebula_robosense/nebula_robosense/src/: robosense_ros_wrapper.cpp
src/nebula_velodyne/nebula_velodyne/: CMakeLists.txt
src/nebula_velodyne/nebula_velodyne/src/: velodyne_ros_wrapper.cpp
